implement LuckPermsService and add more configuration